Add new Java 14 code