@@ -4,8 +4,8 @@
 #
 
 
-java --module-path app/target:lib/target -m java9.app/pro.tremblay.java9.app.App
+java --module-path app/target:lib/target -m java9.app/app.App
 
-#java --module-path app/target:lib/target -m pro.tremblay.java9.app/pro.tremblay.java9.app.App
+#java --module-path app/target:lib/target -m pro.tremblay.java9.app/app.App
 
-#java --enable-preview --module-path app/target/classes:lib/target/classes -m pro.tremblay.java9.app/pro.tremblay.java9.app.App
+#java --module-path app/target/classes:lib/target/classes -m pro.tremblay.java9.app/app.App
